--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,1 @@
-PORT=3000
-MONGODB_URI=mongodb+srv://BellyBun:BellyBun23@bellybun.eyli5az.mongodb.net/
+MONGO_URL=mongodb+srv://bellybun:bellybun23@bellybun.mzx8e2j.mongodb.net/bellybun?retryWrites=true&w=majority
