--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
     "argon2": "^0.31.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
