--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "argon2": "^0.31.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^8.0.3",
     "yup": "^1.3.3"
   },
