--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.49.2",
     "react-native": "0.72.6",
     "react-native-date-picker": "^4.3.5",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
