--- a/server/package.json
+++ b/server/package.json
@@ -1,28 +1,31 @@
 {
-  "dependencies": {
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.17.10",
-    "argon2": "^0.31.2",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "mongoose": "^8.0.3",
-    "yup": "^1.3.3"
-  },
-  "devDependencies": {
-    "@types/node": "^20.10.4",
-    "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
-  },
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon server.ts"
+    "start": "node dist/server.js",
+    "dev": "nodemon --transpile-only src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-session": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "mongoose": "^8.0.3",
+    "yup": "^1.3.3"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-session": "^2.0.48",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.4",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  }
 }
