--- a/server/package.json
+++ b/server/package.json
@@ -3,25 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon --transpile-only src/server.ts"
+    "start": "nodemon server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "bcrypt": "^5.1.1",
-    "cookie-session": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "yup": "^1.3.3"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
     "nodemon": "^3.0.2",
