--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-session": "^2.0.48",
     "@types/jsonwebtoken": "^9.0.5",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
