--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
     "nodemon": "^3.0.2",
