--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.49.2",
     "react-native": "0.72.6",
+    "react-native-circular-progress": "^1.3.9",
     "react-native-date-picker": "^4.3.5",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.4",
