--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "react-native-circular-progress": "^1.3.9"
   }
 }
