--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -28,7 +28,7 @@
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "13.9.0",
     "typescript": "^5.1.3",
     "yup": "^1.3.3"
   },
