--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "typescript": "^5.1.3",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "expo-clipboard": "~4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
