--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "expo-clipboard": "~5.0.1",
     "react-native-circular-progress": "^1.3.9"
   }
 }
