--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@types/react": "~18.2.14",
     "expo": "~49.0.15",
+    "expo-clipboard": "~4.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
@@ -30,8 +30,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "typescript": "^5.1.3",
-    "yup": "^1.3.3",
-    "expo-clipboard": "~4.3.1"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
