--- a/client/app.json
+++ b/client/app.json
@@ -8,7 +8,7 @@
     "userInterfaceStyle": "light",
 
     "splash": {
-      "image": "./assets/iconwithtitle.png",
+      "image": "./assets/belly-splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#A36361"
     },
