--- a/client/app.json
+++ b/client/app.json
@@ -18,7 +18,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/bellyBunIcon.png",
         "backgroundColor": "#ffffff"
       }
     },
